--- a/index.html
+++ b/index.html
@@ -4,17 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Basic -->
-    <title>Class Notes | Hirusha Adikari</title>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Primary Meta Tags -->
+    <title>Class Notes - Hirusha Adikari</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="title" content="Class Notes - Hirusha Adikari" />
+    <meta name="description" content="Ace your Computer Science / Information Technology - London O/L exams with us. Contact us at: +94777662700. " />
 
-    <!-- Meta Tags -->
-    <!-- 
-      Generate yours at:
-        https://metatags.io/
-        https://www.seoptimer.com/meta-tag-generator
-    -->
-        
+    <!-- Secondary Meta Tags -->
+    <meta name="keywords" content="london ol, london al, cambridge, edexcel, information technology, computer science, 2210, cie, ol, al, pearson, it, cs, tution, notes, past papers">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="3 days">
+    <meta name="author" content="Hirusha Adikari">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://notes.hirusha.xyz/" />
+    <meta property="og:title" content="Class Notes - Hirusha Adikari" />
+    <meta property="og:description" content="Ace your Computer Science / Information Technology - London O/L exams with us. Contact us at: +94777662700. " />
+    <meta property="og:image" content="https://notes.hirusha.xyz/logo.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://notes.hirusha.xyz/" />
+    <meta property="twitter:title" content="Class Notes - Hirusha Adikari" />
+    <meta property="twitter:description" content="Ace your Computer Science / Information Technology - London O/L exams with us. Contact us at: +94777662700. " />
+    <meta property="twitter:image" content="https://notes.hirusha.xyz/logo.svg" />
   </head>
   <body>
     <div id="root"></div>
